@startuml
class EmployeeController {
  +deleteEmployee(id: Long): BaseResponse<Void>
}
interface EmployeeMapper {
  +deleteById(id: Long): int ' or void
}
class BaseResponse<T> {
  +code: String
  +message: String
  +data: T
}
class Void {
 ' Represents a void or no specific data response
}


EmployeeController ..> EmployeeMapper : uses
EmployeeController ..> BaseResponse : uses in response
BaseResponse o-- Void : (T is Void)
@enduml
